# serializer version: 1
# name: TestQuadXHoverCostEqual.test_snapshot
  -0.005546260092644
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.1
  0.002660358203223
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.10
  -2.728883e-09
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.100
  -0.0527336655245
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.101
  0.016079648325736
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.102
  0.015033288370922
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.103
  0.998365967804806
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.104
  0.025584104044566
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.105
  0.025767317829552
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.106
  0.751791685554476
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.107
  0.001394315992608
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.108
  0.001674797057525
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.109
  0.959756414856305
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.11
  1.0237501e-08
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.110
  0.903931208706458
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.111
  2.027971026224859
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.112
  -0.355539074523099
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.113
  0.181790977427822
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.114
  0.127910999008486
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.115
  0.145353815381727
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.116
  0.260218258786454
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.117
  0.422730979029815
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.118
  0.150638837952191
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.119
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.12
  0.968122447374477
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.120
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.121
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.122
  1.67851560357164
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.123
  -4.768844212374379
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.124
  3.175060517229094
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.125
  -0.038429420454238
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.126
  0.008524195436898
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.127
  0.032911866570787
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.128
  0.998682795873911
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.129
  0.057951989933659
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.13
  0.0
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.130
  0.072838812168016
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.131
  0.910100347698314
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.132
  0.002796698194735
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.133
  0.004839175658865
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.134
  0.979771504157222
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.135
  0.34296633177342
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.136
  -2.740617007691522
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.137
  2.05856736603782
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.138
  0.505331519297652
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.139
  0.520012854878745
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.14
  0.0
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.140
  0.333953225599862
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.141
  0.591904056319934
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.142
  0.523663295629717
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.143
  0.099738437271926
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.144
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.145
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.146
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.15
  0.0
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.16
  0.0
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.17
  0.050449831588859
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.18
  0.051131413074664
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.19
  0.048928499654924
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.2
  0.001485007497906
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.20
  0.049153413433463
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.21
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.22
  2.735040642527962
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.23
  -1.152209644123205
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.24
  3.0068916952955
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.25
  0.016530721311727
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.26
  -0.007777188807383
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.27
  0.016729439377876
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.28
  0.999693141141456
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.29
  -0.011901595662233
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.3
  -9.9583383586e-05
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.30
  -0.023986617815915
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.31
  -0.686439128909662
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.32
  -4.608636589e-06
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.33
  -8.229901244e-06
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.34
  0.948831586609078
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.35
  1.721316619099806
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.36
  -0.384038089301797
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.37
  2.25313718157236
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.38
  0.557894423247491
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.39
  0.415263636671929
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.4
  -5.7537558e-06
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.40
  0.472017180226357
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.41
  0.617629918452068
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.42
  0.611093026357304
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.43
  0.087709339352501
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.44
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.45
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.46
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.47
  -6.334731068635765
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.48
  4.775334279472101
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.49
  1.220514901151053
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.5
  1.6838242971e-05
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.50
  -0.01060372726374
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.51
  0.021283279530193
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.52
  0.051348143414379
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.53
  0.998397691878568
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.54
  -0.001832618857884
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.55
  -0.023857412059533
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.56
  -0.217962246622005
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.57
  -0.000155883874945
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.58
  -0.000412495247053
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.59
  0.937960536863591
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.6
  0.999999994883259
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.60
  -2.549858925072974
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.61
  2.988423371570267
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.62
  1.640789138667041
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.63
  0.628851444221563
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.64
  0.742426197199802
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.65
  0.742970312275384
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.66
  0.543964017484906
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.67
  0.498729505904009
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.68
  0.109604918172111
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.69
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.7
  -8.92936435e-06
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.70
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.71
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.72
  -1.147696024092314
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.73
  -3.194849968191354
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.74
  -2.65752306804359
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.75
  -0.070081986709165
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.76
  0.012550286137052
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.77
  0.03552110721449
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.78
  0.996829602489328
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.79
  0.026133795224247
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.8
  0.000152711200242
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.80
  -0.033193594195807
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.81
  0.472567984722178
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.82
  0.000231426066448
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.83
  -0.000526820863918
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.84
  0.942020302647411
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.85
  -2.3366309591134
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.86
  -0.311734346044068
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.87
  -0.811799955800418
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.88
  0.741411991078882
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.89
  0.551633340670808
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.9
  -0.763516733780097
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.90
  0.85861159172926
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.91
  0.818359508283141
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.92
  0.71307207215371
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.93
  0.200517337944326
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.94
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.95
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.96
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.97
  0.942116505077974
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.98
  2.752935615019766
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.99
  -0.636746716899522
# ---
